# pendant

./: LICENSE  README.md  pyproject.toml  setup.py
pendant/: __main__.py  app.py  core.py  note.py  paths.py  vault.py
